--- a/app.html
+++ b/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <meta name="format-detection" content="telephone=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="user-scalable=no, viewport-fit=cover">
